# galena

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  defaults.props  galena.sln
app/: CMakeLists.txt  app.vcxproj  app.vcxproj.filters
app/shaders/: fragment.frag  vertex.vert
app/src/: frame_metrics.hpp  glad.c  imgui.cpp  imgui.hpp  log.cpp  log.hpp  main.cpp  opengl_backend.cpp  opengl_backend.hpp  opengl_magic.cpp  test_app.cpp  test_app.hpp  vulkan_backend.cpp  vulkan_backend.hpp
app/src/glad/: glad.h
benchmarks-opengl/: CMakeLists.txt  benchmarks-opengl.vcxproj  benchmarks-opengl.vcxproj.filters  indirection.cpp  read_file.cpp  vao.cpp
core/: CMakeLists.txt  core.vcxproj  core.vcxproj.filters
core/include/core/: enum_util.hpp  log_macros.hpp  log_subsystem.hpp  preprocessor.hpp  resource.hpp
core/src/: log.cpp  log.hpp  log_subsystem.cpp
gfx/: CMakeLists.txt  gfx.vcxproj  gfx.vcxproj.filters
gfx-opengl/: CMakeLists.txt  gfx-opengl.vcxproj  gfx-opengl.vcxproj.filters
gfx-opengl/include/gfx/gl/: opengl_renderer_core.hpp
gfx-opengl/src/: buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  imgui_graphics.cpp  imgui_graphics.hpp  log.cpp  log.hpp  opengl_renderer_core.cpp  program.cpp  program.hpp  program_pipeline.cpp  program_pipeline.hpp  renderbuffer.cpp  renderbuffer.hpp  renderer.cpp  renderer.hpp  sampler.cpp  sampler.hpp  text_layout.cpp  text_layout.hpp  texture.cpp  texture.hpp  vertex_array_object.cpp  vertex_array_object.hpp
gfx-opengl/src/adapters/: opengl_buffer_core.cpp  opengl_buffer_core.hpp  opengl_imgui_graphics.cpp  opengl_imgui_graphics.hpp  opengl_mesh_core.cpp  opengl_mesh_core.hpp  opengl_pipeline_core.cpp  opengl_pipeline_core.hpp  opengl_program_core.cpp  opengl_program_core.hpp  opengl_renderer_core.cpp
gfx-vulkan/: CMakeLists.txt
gfx-vulkan/include/gfx/vk/: vulkan_renderer_core.hpp
gfx-vulkan/src/: log.cpp  log.hpp  vulkan_imgui_graphics.cpp  vulkan_imgui_graphics.hpp  vulkan_renderer_core.cpp  vulkan_renderer_core.hpp
gfx/include/gfx/: buffer.hpp  imgui_graphics.hpp  mesh.hpp  pipeline.hpp  program.hpp  renderer.hpp
gfx/src/: buffer.cpp  log.cpp  log.hpp  mesh.cpp  pipeline.cpp  program.cpp  renderer.cpp
ui/: CMakeLists.txt  ui.vcxproj  ui.vcxproj.filters
ui/include/ui/: clock.hpp  config_opengl.hpp  events.hpp  imgui_system.hpp  keyboard.hpp  opengl_context.hpp  platform.hpp  vulkan_context.hpp  window.hpp
ui/src/: keyboard.cpp  log.cpp  log.hpp  opengl_context.cpp  platform.cpp  platform_info.hpp  vulkan_context.cpp  window.cpp
ui/src/sdl/: imgui_impl_sdl.cpp  sdl_dispatch_events.hpp  sdl_imgui_system.cpp  sdl_keyboard.hpp  sdl_opengl_context.cpp  sdl_opengl_context.hpp  sdl_platform.cpp  sdl_platform.hpp  sdl_util.hpp  sdl_vulkan_context.cpp  sdl_vulkan_context.hpp  sdl_window.cpp
